cabal-version:        2.4
name:                 the-one-hs
version:              0.1.0.0
synopsis:             Api wrapper for the-one-api.dev
description:          Please see README.md
homepage:             https://github.com/codedmart/brandonmartin-SDK
author:               Brandon Martin
maintainer:           brandon@codedmart.com
category:             Web
build-type:           Simple

common shared-properties

library theone
  hs-source-dirs:     src
  exposed-modules:    Web.TheOne
                      Web.TheOne.Types
  build-depends:      base >= 4.8 && < 5
                      , aeson
                      , generics-sop
                      , http-api-data
                      , http-client
                      , http-client-tls
                      , http-media
                      , safe
                      , servant
                      , servant-client
                      , servant-client-core
                      , text
                      , unordered-containers
  default-extensions: BlockArguments
                      , DataKinds
                      , DeriveGeneric
                      , DerivingStrategies
                      , DerivingVia
                      , ExplicitForAll
                      , FlexibleContexts
                      , MultiParamTypeClasses
                      , NamedFieldPuns
                      , OverloadedStrings
                      , QuantifiedConstraints
                      , RecordWildCards
                      , ScopedTypeVariables
                      , TemplateHaskell
                      , TypeApplications
                      , TypeFamilies
                      , TypeOperators
                      , ViewPatterns
  default-language:   Haskell2010
  exposed:            True
  buildable:          True

executable theone-example
  main-is:            Main.hs
  build-depends:      base >= 4.8 && < 5
                      , aeson
                      , generics-sop
                      , http-api-data
                      , http-client
                      , http-client-tls
                      , http-media
                      , safe
                      , servant
                      , servant-client
                      , servant-client-core
                      , text
                      , unordered-containers
                      , theone
  default-extensions: BlockArguments
                      , DataKinds
                      , DeriveGeneric
                      , DerivingStrategies
                      , DerivingVia
                      , ExplicitForAll
                      , FlexibleContexts
                      , MultiParamTypeClasses
                      , NamedFieldPuns
                      , OverloadedStrings
                      , QuantifiedConstraints
                      , RecordWildCards
                      , ScopedTypeVariables
                      , TemplateHaskell
                      , TypeApplications
                      , TypeFamilies
                      , TypeOperators
                      , ViewPatterns
  default-language:   Haskell2010

test-suite spec
  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  build-depends:      base >= 4.8 && < 5
                      , aeson
                      , generics-sop
                      , http-api-data
                      , http-client
                      , http-client-tls
                      , http-media
                      , http-types
                      , safe
                      , servant
                      , servant-client
                      , servant-client-core
                      , text
                      , unordered-containers
                      , wai
                      , hspec
                      , hspec-discover
                      , HUnit
                      , QuickCheck
                      , hspec-wai
                      , hspec-wai-json
                      , wai-extra
  default-extensions: BlockArguments
                      , DataKinds
                      , DeriveGeneric
                      , DerivingStrategies
                      , DerivingVia
                      , ExplicitForAll
                      , FlexibleContexts
                      , MultiParamTypeClasses
                      , NamedFieldPuns
                      , OverloadedStrings
                      , QuantifiedConstraints
                      , RecordWildCards
                      , ScopedTypeVariables
                      , TemplateHaskell
                      , TypeApplications
                      , TypeFamilies
                      , TypeOperators
                      , ViewPatterns
  default-language:   Haskell2010

source-repository head
  type:               git
  location:           https://github.com/codedmart/brandonmartin-SDK

